    unselecting package (mdv#63940)
  o kill unused DUDF support (mga#4493)
  o return the proper error code in some cases when failing to install some
    packages
  o --test: do not display "More information on package"
  o --test: do not update /var/lib/rpm/installed-through-deps.list
- urpmi.addmedia:
  o fix $ARCH and $VERSION keyword substition in media URL

Version 6.44 - 07 February 2012

- fix package count when using -a and when some packages exist in several
  repositories (eg: noarch packages) (mga#4322)
- translation updates

Version 6.43.1 - 23 January 2012

- do not test urpm::dudf
- kill a minor GC cycle

Version 6.43 - 6 January 2012

- urpmf, urpmq:
  o fix using xml info files with quotes in medium name
- urpmi
  o do not compute orphan packages when handling priority upgrades
  o disable dudf support (we've nothing server side)
  o fix checking available space of mount point (mga#1342)
  o fix reading unrequested packages list when chrooted
  o fix already installed noarch packages are listed twice on x86_64 (mga#4038)

Version 6.42 - 05 November 2011

- urpmi.addmedia:
  o do not pick rsync medium if rsync is not installed (mga#3557)
- urpmi.update:
  o document that -a only works on enabled media (mga#3190)

Version 6.41 - 14 October 2011

- add infrastructure for rpmdrake (#920)
- add infrastructure so that GUIes can offer not to ask anymore about missing
  or bad packages
- fix broken 'urpmi --no-md5sum' (pok, mga#62557)
- use rsync to download from rsync-mirrors (Alexander Barakin, mga#2518)

Version 6.40 - 07 May 2011

- compress sources with xz instead of bzip2
- fix (g)urpmi --auto-select --update defaulting to all media when
  there're no update media (#1024)

Version 6.39 - 21 November 2010

- install zeroconf documentation and example files.
- resurrect urpmi.recover now that the required functionality has been brought
  back with rpm5.

Version 6.38 - 18 June 2010

- add --zeroconf support in urpmi.addmedia
