@@ -11,6 +11,8 @@
   o --test: do not update /var/lib/rpm/installed-through-deps.list
 - urpmi.addmedia:
   o fix $ARCH and $VERSION keyword substition in media URL
+- urpmq:
+  o non-zero exit code if .rpm file was not found (POK, mdv#64969)
 
 Version 6.44 - 07 February 2012
 
